# OpenGRC

./: .gitignore  Dockerfile.arm64.fast  LICENSE  README.md  UI-SCAFFOLDING-SUMMARY.md  docker-compose.yml  plan.md
api/: .env.example  Cargo.toml  README.md  build-arm64-fast.sh  push-to-ecr-prod.sh
api/migrations/: 20251212184023_initial_schema.sql  20251212204426_seed_soc2_framework.sql  20251213211043_integration_health.sql  20251213220043_oauth_and_retry_logic.sql  20251214071607_aws_integration_tables.sql  20251214162714_policy_reminders.sql  20251214165416_automated_evidence_collection.sql  20251214171126_automated_control_testing.sql  20251215090338_soc2_parsed_reports_and_access_reviews.sql  20251215123237_vendor_questionnaires_and_asset_lifecycle.sql  20251215203613_advanced_analytics.sql  20251215205103_recurring_tasks.sql  20251215212857_enterprise_features.sql  20251215215547_collaboration_features.sql  20251216002806_seed_iso27001_framework.sql  20251216003909_seed_hipaa_framework.sql  20251216004232_seed_pci_dss_framework.sql  20251216004505_seed_gdpr_framework.sql  20251216004809_seed_nist_csf_framework.sql  20251216004810_seed_sox_itgc_framework.sql  20251216005623_cross_framework_mappings.sql  20251216011505_ai_assistant.sql
api/src/: lib.rs  main.rs  search.rs
api/src/cache/: mod.rs
api/src/config/: mod.rs
api/src/integrations/: mod.rs  oauth.rs  provider.rs
api/src/integrations/aws/: client.rs  config.rs  mod.rs  provider.rs  sample_policy.json  sync.rs
api/src/integrations/azure_ad/: client.rs  config.rs  mod.rs  provider.rs  sync.rs
api/src/integrations/github/: client.rs  config.rs  mod.rs  provider.rs  sync.rs
api/src/integrations/google_workspace/: client.rs  config.rs  mod.rs  provider.rs  sync.rs
api/src/integrations/jira/: client.rs  config.rs  mod.rs  provider.rs  sync.rs
api/src/integrations/okta/: client.rs  config.rs  mod.rs  provider.rs  sync.rs
api/src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs
api/src/models/: asset.rs  audit.rs  collaboration.rs  control.rs  enterprise.rs  evidence.rs  framework.rs  integration.rs  mod.rs  policy.rs  questionnaire.rs  risk.rs  task.rs  vendor.rs
api/src/routes/: access_reviews.rs  ai.rs  analytics.rs  assets.rs  audits.rs  auth.rs  aws.rs  collaboration.rs  control_test_automation.rs  controls.rs  enterprise.rs  evidence.rs  evidence_automation.rs  frameworks.rs  health.rs  integrations.rs  mod.rs  notifications.rs  policies.rs  policy_templates.rs  questionnaires.rs  reports.rs  risks.rs  search.rs  soc2.rs  sso.rs  tasks.rs  vendors.rs
api/src/services/: access_review.rs  ai.rs  analytics.rs  asset.rs  audit.rs  aws.rs  collaboration.rs  control.rs  control_test_automation.rs  enterprise.rs  evidence.rs  evidence_automation.rs  framework.rs  integration.rs  mod.rs  notification.rs  pdf.rs  policy.rs  questionnaire.rs  reports.rs  risk.rs  soc2_parser.rs  task.rs  vendor.rs
api/src/storage/: mod.rs
api/src/templates/: mod.rs  policies.rs
api/src/templates/policies/: comp_001_risk_management.md  comp_002_vendor_management.md  comp_003_incident_response.md  comp_004_business_continuity.md  comp_005_data_classification.md  hr_001_code_of_conduct.md  hr_002_background_check.md  it_001_acceptable_use.md  (+17 more)
api/src/utils/: encryption.rs  error.rs  mod.rs
api/src/workers/: control_testing.rs  mod.rs
worker/: .env.example  Cargo.toml  README.md
worker/src/: config.rs  main.rs  queue.rs
worker/src/jobs/: access_review.rs  control_testing.rs  evidence_collection.rs  integration_sync.rs  mod.rs  notifications.rs
(+98 files in other folders)
