[package]
name = "opengrc-api"
version = "0.7.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.43", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
