[package]
name = "opengrc-api"
version = "1.6.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.43", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
once_cell = "1.20"

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# AWS SDKs
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65"
aws-credential-types = "1.2"
aws-sdk-sts = "1.51"
aws-sdk-iam = "1.51"
aws-sdk-cloudtrail = "1.55"
aws-sdk-securityhub = "1.56"
aws-sdk-config = "1.53"
aws-sdk-ec2 = "1.90"
aws-sdk-rds = "1.107"

# File handling
mime_guess = "2.0"

# Search
meilisearch-sdk = "0.28"
sha2 = "0.10.9"
urlencoding = "2.1.3"

[dev-dependencies]
