[package]
name = "opengrc-worker"
version = "0.1.1"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "tls-rustls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Redis for job queue
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client for integrations
reqwest = { version = "0.12", features = ["json"] }

# Cron scheduling
cron = "0.12"
